# ibuk-dl-uw

./: LICENSE  README.md  pyproject.toml
.github/workflow/: build-windows.yml
ibuk_dl/: main.py  yeast.py
