[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibuk-dl-uw"
version = "0.3" 
description = "Download books from libra.ibuk.pl (UW HAN Edition with PDF support)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
]
dependencies = ["beautifulsoup4", "requests", "websockets", "weasyprint", "tqdm"]

[project.scripts]
ibuk-dl = "ibuk_dl.main:run_main"

[project.urls]
"Homepage" = "https://github.com/tryingtodosth/ibuk-dl-uw"
